--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PTT Software Co.,Ltd</title>
+    <title>PTT Project Co.,Ltd</title>
     <!-- fav icon -->
     <link href="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg" rel="icon" type="image/jpg" />
     <!-- bootstrap css1 js1 -->
@@ -51,7 +51,7 @@
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <a href="#" class="navbar-brand mx-3">
                 <img src="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg " width="50" alt="sitelogo"/>
-                <span class="ms-2">PTT Software Co.,Ltd</span>
+                <span class="ms-2">PTT Project Co.,Ltd</span>
             </a>
 
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav"><i class="navbar-toggler-icon"></i></button>
